--- a/css/estilos.css
+++ b/css/estilos.css
@@ -493,7 +493,7 @@ body{
     
     .nav__link--menu{
         position:fixed;
-        background-color: #cbe340;
+        background-color:#fff;
         background: linear-gradient(to right, #60badd, #c991d9fc);
         top: 0;
         left: 0;
